<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="to_Turkey">Куда - Турция</string>
    <string name="from_Moscow">Откуда - Москва</string>
    <string name="close">close</string>
    <string name="clean">clean</string>
    <string name="difficult_way">Сложный маршрут</string>
    <string name="wherever">Куда угодно</string>
    <string name="holidays">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="istanbul">Стамбул</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="difficult_way_plug">"кнопки \"Сложный маршрут\""</string>
    <string name="holidays_plug">"кнопки \"Выходные\""</string>
    <string name="hot_tickets_plug">"кнопки \"Горячие билеты\""</string>
    <string name="price">"от %s ₽"</string>
    <string name="search_air_tickets_text">Поиск дешевых авиабилетов</string>
    <string name="fly_musically">Музыкально отлететь</string>
    <string name="price_example">от 22 264 Р</string>
    <string name="country_example">Будапешт</string>
    <string name="star_example">Die Antwood</string>
</resources>