<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/iv_fly_musically"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:background="@drawable/rounded_square"
        android:clipToOutline="true"
        android:scaleType="fitCenter"
        tools:srcCompat="@drawable/socrat_and_lera" />

    <TextView
        android:id="@+id/fly_musically_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text="@string/star_example" />

    <TextView
        android:id="@+id/fly_musically_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:text="@string/country_example" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fly_musically_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_plane_grey"
            tools:text="@string/price_example" />
    </LinearLayout>
</LinearLayout>